--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -17,6 +17,24 @@ services:
     networks:
       - lab-net
     restart: always
+  
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@labcr.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-Ad1_8RhlnKC}
+      TZ: 'America/Costa_Rica'
+    volumes:
+      - './dbbackups:/var/lib/pgadmin/dbbackups'
+      - 'pgadmin-data:/root/.pgadmin'
+    ports:
+      - '5454:80'
+    networks:
+      - lab-net
+    restart: always
+    depends_on:
+      - postgres
 
   keycloak:
     container_name: keycloak_container
