--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - 'resources/init.sql:/docker-entrypoint-initdb.d/init.sql'
+      - './resources/init.sql:/docker-entrypoint-initdb.d/init.sql'
       - 'postgres-data:/var/lib/postgresql/data/'
     networks:
       - lab-net
