--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -47,8 +47,8 @@ services:
       DB_SCHEMA: lab_keycloak
       DB_USER: userpgdb_docker
       DB_PASSWORD: p4zWorD_d0k3r
-      KEYCLOAK_USER: kc_admin
-      KEYCLOAK_PASSWORD: kc_T1sa0Kpf4
+      #KEYCLOAK_USER: kc_admin
+      #KEYCLOAK_PASSWORD: kc_T1sa0Kpf4
       TZ: 'America/Costa_Rica'
     ports:
       - '9091:8080'
