cambios en interfaz de inicio de sesión

--- a/containers/themes/ice_energia/login/theme.properties
+++ b/containers/themes/ice_energia/login/theme.properties
@@ -17,6 +17,8 @@ kcContentWrapperClass=row
 
 kcHeaderClass=login-pf-page-header
 kcFeedbackAreaClass=col-md-12
+kcFeedbackAreaClass8=col-md-8
+kcFeedbackAreaClass4=col-md-4
 kcLocaleClass=col-xs-12 col-sm-1
 kcAlertIconClasserror=pficon pficon-error-circle-o
 
@@ -59,9 +61,13 @@ kcInfoAreaClass=col-xs-12 col-sm-4 col-md-4 col-lg-5 details
 kcButtonClass=btn
 # classes defining priority of the button - primary or default (there is typically only one priority button for the form)
 kcButtonPrimaryClass=btn-primary
+kcButtonGoogleClass=btn-google
+kcButtonFacebookClass=btn-facebook
+kcButtonInstagramClass=btn-instagram
 kcButtonDefaultClass=btn-default
 # classes defining size of the button
 kcButtonLargeClass=btn-lg
+kcButtonSmallClass=btn-sm
 kcButtonBlockClass=btn-block
 
 ##### css classes for input
