--- a/containers/themes/ice_energia/login/theme.properties
+++ b/containers/themes/ice_energia/login/theme.properties
@@ -53,6 +53,8 @@ kcFormSettingClass=login-pf-settings
 kcTextareaClass=form-control
 kcSignUpClass=login-pf-signup
 
+randomImage=2
+
 
 kcInfoAreaClass=col-xs-12 col-sm-4 col-md-4 col-lg-5 details
 
